<resources>
    <string name="app_name">NudleApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
    <string name="boys_fashion">Boys fashion</string>
    <string name="boys">13.3 Inch, 256 GB</string>
    <string name="a">4.7</string>
    <string name="ainr_56990">INR 56990</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">category</string>
    <string name="notifications">notifications</string>
    <string name="logout">Logout</string>
    <string name="categories">TextView</string>
    <string name="nudle">NUDLE</string>
    <string name="brand1">brand1</string>
    <string name="brand2">brand2</string>
    <string name="brand3">brand3</string>
    <string name="explore_by_brands">Explore by Brands</string>
    <string name="explore_brands">EXPLORE BRANDS</string>
    <string name="cart">Item</string>
    <string name="cart2">cart2</string>
    <string name="cart3">cart3</string>
    <string name="trending">TRENDING</string>
    <string name="newly_added">NEWLY ADDED</string>
    <string name="up_to_70_off">up to 70% off</string>
    <string name="up_to_50_off">up to 50% off</string>
    <string name="up_to_60_off">up to 60% off</string>
    <string name="watches">Watches</string>
    <string name="jewellary">Jewellary</string>
    <string name="shop_by_discount">SHOP BY DISCOUNT</string>
</resources>
