<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="5dp">


            <RelativeLayout
                android:id="@+id/list_layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8AA39999"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="2dp"/>

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="230dp"
                    android:layout_marginBottom="16dp"
                    android:background="#2E8FD8"
                    android:backgroundTintMode="src_over"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/boys_fashion"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewShortDesc"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/boys" />

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_below="@id/imageView"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/a"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_below="@id/imageView"
                    android:layout_marginStart="109dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/ainr_56990"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>



</LinearLayout>
</ScrollView>