<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_brands"
            android:textSize="25sp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:layout_below="@id/brand"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:id="@+id/list_layout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8ADFCECE"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/virat" />

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView2"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wrong" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="136dp"
                    android:layout_toStartOf="@id/imageView2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/road" />

                <ImageView
                    android:id="@+id/imageView33"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView3"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="135dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roadster" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@id/imageView3"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/selena" />

                <ImageView
                    android:id="@+id/imageView44"

                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="135dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/puma" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/imageView22"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_50_off"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="139dp"
                    android:layout_marginTop="196dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_60_off"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/imageView44"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_70_off"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:layout_below="@id/card_view2"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:id="@+id/list_layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8ADFCECE"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vermoda" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView5"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vermodalogo" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="136dp"
                    android:layout_toStartOf="@id/imageView5"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hrx" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView7"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="135dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hrxlogo" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@id/imageView7"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/levis" />

                <ImageView
                    android:id="@+id/imageView10"

                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/imageView7"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="135dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/levislogo" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/imageView6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_50_off"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="139dp"
                    android:layout_marginTop="196dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_60_off"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/imageView10"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="17dp"
                    android:gravity="center"
                    android:text="@string/up_to_70_off"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>